update mvc structure

--- a/Auto-Part/Auto-Part-WebUI/Auto-Part-WebUI.csproj
+++ b/Auto-Part/Auto-Part-WebUI/Auto-Part-WebUI.csproj
@@ -5,4 +5,10 @@
     <RootNamespace>Auto_Part_WebUI</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Models\" />
+    <Folder Include="Controllers\" />
+    <Folder Include="Views\" />
+  </ItemGroup>
+
 </Project>
