--- a/Auto-Part/Auto-Part-WebUI/Auto-Part-WebUI.csproj
+++ b/Auto-Part/Auto-Part-WebUI/Auto-Part-WebUI.csproj
@@ -7,8 +7,10 @@
 
   <ItemGroup>
     <Folder Include="Models\" />
-    <Folder Include="Controllers\" />
-    <Folder Include="Views\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="5.0.2" />
   </ItemGroup>
 
 </Project>
