--- a/Auto-Part/Auto-Part-WebUI/Auto-Part-WebUI.csproj
+++ b/Auto-Part/Auto-Part-WebUI/Auto-Part-WebUI.csproj
@@ -96,6 +96,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.2.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="5.0.16" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.17" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="5.0.17">
       <PrivateAssets>all</PrivateAssets>
@@ -111,7 +113,6 @@
 
   <ItemGroup>
     <Folder Include="Areas\Admin\Models\" />
-    <Folder Include="wwwroot\libs\" />
   </ItemGroup>
 
   <ItemGroup>
