--- a/Auto-Part/Auto-Part-WebUI/appsettings.json
+++ b/Auto-Part/Auto-Part-WebUI/appsettings.json
@@ -9,5 +9,13 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "cString": "Data Source=.\\SQLEXPRESS;Initial Catalog=ECoPart;user id=sa;password=query;MultipleActiveResultSets=true"
+  },
+  "emailAccount": {
+    "displayName": "EcoPart",
+    "smtpServer": "smtp.mail.ru",
+    "smtpPort": 25,
+    "userName": "fullstackstaff@mail.ru",
+    "password": "Q!W@E#R$T%2022",
+    "cc": "alizadehh541@gmail.com"
   }
 }
