--- a/Auto-Part/Auto-Part-WebUI/appsettings.json
+++ b/Auto-Part/Auto-Part-WebUI/appsettings.json
@@ -11,11 +11,10 @@
     "cString": "Data Source=.\\SQLEXPRESS;Initial Catalog=ECoPart;user id=sa;password=query;MultipleActiveResultSets=true"
   },
   "emailAccount": {
-    "displayName": "EcoPart",
-    "smtpServer": "smtp.mail.ru",
-    "smtpPort": 25,
-    "userName": "fullstackstaff@mail.ru",
-    "password": "Q!W@E#R$T%2022",
-    "cc": "alizadehh541@gmail.com"
+    "displayName": "Ecoparts",
+    "smtpServer": "smtp.gmail.com",
+    "smtpPort": 587,
+    "userName": "alisal@code.edu.az",
+    "password": "uuvypohbhvgamgsl"
   }
 }
