--- a/Auto-Part/Auto-Part-WebUI/appsettings.json
+++ b/Auto-Part/Auto-Part-WebUI/appsettings.json
@@ -8,7 +8,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "cString": "Data Source=.\\SQLEXPRESS;Initial Catalog=ECoPart;user id=sa;password=query;MultipleActiveResultSets=true"
+    "cString": "Data Source=.;Initial Catalog=EcoPartlast;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "emailAccount": {
     "displayName": "Ecoparts",
