--- a/Auto-Part/Auto-Part-WebUI/appsettings.json
+++ b/Auto-Part/Auto-Part-WebUI/appsettings.json
@@ -8,13 +8,14 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "cString": "Data Source=.;Initial Catalog=EcoPartlast;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "cString": "Data Source=SQL5063.site4now.net;Initial Catalog=db_a8d4c3_ecoparts;User Id=db_a8d4c3_ecoparts_admin;Password=PauloCoelho541"
+    //"cString": "Data Source=.\\SQLEXPRESS;Initial Catalog=ECoPart;user id=sa;password=query;MultipleActiveResultSets=true"
   },
   "emailAccount": {
     "displayName": "Ecoparts",
-    "smtpServer": "smtp.gmail.com",
-    "smtpPort": 587,
-    "userName": "alisal@code.edu.az",
-    "password": "uuvypohbhvgamgsl"
+    "smtpServer": "mail5010.site4now.net",
+    "smtpPort": 8889,
+    "userName": "support@ecoparts.az",
+    "password": "PauloCoelho541!"
   }
 }
