--- a/Auto-Part/Auto-Part-WebUI/appsettings.Development.json
+++ b/Auto-Part/Auto-Part-WebUI/appsettings.Development.json
@@ -5,5 +5,15 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "ConnectionStrings": {
+    "cString": "Data Source=.\\SQLEXPRESS;Initial Catalog=ECoPart;user id=sa;password=query;MultipleActiveResultSets=true"
+  },
+  "emailAccount": {
+    "displayName": "Ecoparts",
+    "smtpServer": "mail5010.site4now.net",
+    "smtpPort": 8889,
+    "userName": "support@ecoparts.az",
+    "password": "PauloCoelho541!"
   }
 }
