--- a/Auto-Part/Auto-Part-WebUI/Auto-Part-WebUI.csproj
+++ b/Auto-Part/Auto-Part-WebUI/Auto-Part-WebUI.csproj
@@ -80,6 +80,7 @@
     <Content Include="wwwroot\admin\files\bower_components\pnotify\dist\pnotify.css" />
     <Content Include="wwwroot\admin\files\bower_components\pnotify\dist\pnotify.history.css" />
     <Content Include="wwwroot\admin\files\bower_components\pnotify\dist\pnotify.mobile.css" />
+    <Content Include="wwwroot\admin\files\bower_components\searchable-multiselect\jquery.dropdown.min.css" />
     <Content Include="wwwroot\admin\files\bower_components\seiyria-bootstrap-slider\dist\css\bootstrap-slider.css" />
     <Content Include="wwwroot\admin\files\bower_components\select2\dist\css\select2.min.css" />
     <Content Include="wwwroot\admin\files\bower_components\slick-carousel\slick\ajax-loader.gif" />
@@ -206,6 +207,7 @@
     <None Include="wwwroot\admin\files\bower_components\popper.js\dist\umd\popper.min.js" />
     <None Include="wwwroot\admin\files\bower_components\raphael\raphael.min.js" />
     <None Include="wwwroot\admin\files\bower_components\rickshaw\rickshaw.js" />
+    <None Include="wwwroot\admin\files\bower_components\searchable-multiselect\jquery.dropdown.min.js" />
     <None Include="wwwroot\admin\files\bower_components\seiyria-bootstrap-slider\dist\bootstrap-slider.js" />
     <None Include="wwwroot\admin\files\bower_components\select2\dist\js\select2.full.min.js" />
     <None Include="wwwroot\admin\files\bower_components\slick-carousel\slick\fonts\slick.svg" />
